--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -1,6 +1,4 @@
 <div style="display: flex;">
-    <app-sidenav></app-sidenav>
-
     <div style="padding: 20px 50px;background-color: #f6f6f6; position: absolute; left:22% ; width: 70%;">
         <mat-toolbar>
             <h2>Patients</h2>
@@ -102,7 +100,7 @@
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-button (click)="onButtonClick(element)">Click me</button>
+                        <button mat-button [routerLink]="['/patient',element.HADM_ID]">View Details</button>
                     </td>
                 </ng-container>
 
