--- a/src/app/components/single-patient-details/single-patient-details.component.html
+++ b/src/app/components/single-patient-details/single-patient-details.component.html
@@ -6,57 +6,99 @@
 
 
 <div class="container-bx">
-
-  <!-- Gauge Chart Call ------------------- -->
-      <div class="mid-section" style="width:60%;">
-        <div #gaugeChart
-        style="border-radius: 24px; width:80% ; margin-left: 20px ;height:48%; background-color: white;">
+  <div class="patient-data-section" style="background-color: white; width: 100%;border-radius: 24px; margin-right: 20px;">
+      <div class="mt-2">
+        <div class="d-flex flex-column align-items-center">
+          <div class="d-flex justify-content-center">
+            <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="" style="width: 20%;">
+          </div>
+          <div class="mt-1">
+            <h2>Mr. Anonymous</h2>
+          </div>
+        </div>
+        <div style="margin-left: 15px; margin-right: 15px;">
+          <hr>
+        </div>
+        <div class="ms-5 me-5 d-flex" style="gap: 30px">
+          <div  class="d-flex justify-content-around" style="width:50%" *ngIf="patientData">
+            <div class="d-flex flex-column" style="width:50%" >
+              <div>
+                <div>
+                  <h3><b>SUBJECT ID:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.subjectID}}</h3>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <h3><b>ADMISSION DATE:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.admissionTime}}</h3>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <h3><b>INSURANCE PROVIDER:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.insurance}}</h3>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <h3><b>ADMISSION TYPE:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.admissionType}}</h3>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex flex-column" style="width: 50%;">
+              <div>
+                <div>
+                  <h3><b>HADM ID:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.hadmID}}</h3>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <h3><b>GENDER:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.gender}}</h3>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <h3><b>AGE:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.AGE}}</h3>
+                </div>
+              </div>
+              <div >
+                <div>
+                  <h3><b>DIAGNOSIS:</b></h3>
+                </div>
+                <div>
+                  <h3>{{patientData.diagnosis}}</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div style="width:50%; display: grid; align-content: center;">
+            <div #gaugeChart
+              style="border-radius: 24px; width:100% ; height:200%; background-color: white; ">
+            </div>
+          </div>
+        </div>
+        <div style="margin-left: 15px; margin-right: 15px;">
+          <hr>
         </div>
       </div>
-  <!-- Gauge Chart Call ------------------- -->
-
-
-  <div class="patient-data-section" style="background-color: white; width: 40%;border-radius: 24px; margin-right: 20px;">
-    <div style="padding-left: 30px; padding-top: 23px;">
-      <h2>Patient Details</h2>
-    </div>
-    <div style="padding-left: 30px; color: white;">
-
-      <div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Patient Id :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div>
-      <div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">HADM Id :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Age :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Gender :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Admission Date :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Insurance Provider :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div><div style="width: 80%; background-color:#F96167;padding:10px 0px ; display: flex; align-items: center;flex-direction: column; margin-bottom: 10px;" >
-        <span style="font-size: 12px;">Risk Group :</span>
-        <span style="font-size: 16px;">lala lala lala laaa</span>
-      </div>
-      
-      <h4></h4>
-      <h4></h4>
-      <h4></h4>
-      <h4></h4>
-      <h4></h4>
-      <h4></h4> 
-    </div>  
-    
-    
   </div>
-    
-  
-
 </div>
