--- a/src/app/dashy/dashy.component.scss
+++ b/src/app/dashy/dashy.component.scss
@@ -91,3 +91,129 @@ li{
         height: 40px;
     }
 }
+
+
+ul {
+    padding: 0;
+    list-style: none;
+}
+li{
+    list-style: none;
+}
+
+.img-cont{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 70px;
+    .dashpic{
+        height: 537px;
+    }
+    .text-cont{
+        width: 451px;
+        margin-top: 30px;
+    }
+    .mb3{
+        margin-bottom: 1rem!important;
+    }
+    .display-4{
+        font-size: calc(1.475rem + 2.7vw);
+        font-weight: 600;
+        line-height: 1.2;
+    }
+    .lead{
+        font-weight: 400;
+    }
+    p{
+        margin-top: 0;
+        margin-bottom: 1rem;
+        color: #677788;
+        font-size: 23px;
+    }
+    .gap-3{
+        margin-top: 29px;
+        height: 45px;
+    }
+    .btn-primary{
+        width: 168.5px;
+        padding: 9px 40px;
+    }
+    .btn-link{
+        width: 142px;
+        text-decoration: none;
+        padding: 9.8px 16px;
+    }
+}
+
+.below-cont{
+    height: 856px;
+    padding-top: 5rem;
+    padding-bottom: 7.5rem;
+    max-width: 1116px;
+    margin-left: 61.5px;
+
+    .below-text{
+        width:52%;
+        text-align: center !important;
+        margin-left: auto !important;
+        margin-right: auto;
+        margin-bottom: 32px;
+        // font-size: 28px;
+    }
+    .list-inline{
+        margin-bottom: 1rem;
+        display: flex;
+        justify-content: center;
+    }
+    .tick{
+        margin-top: 4px;
+        margin-right: 9px;
+    }
+    .list-inline-item{
+        color: #677788;
+    }
+    .card-cont{
+        margin-top: 72px;
+        height: 482px;
+    }
+    .card{
+        border-width: 0;
+        box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%);
+    }
+    .card-body{
+        // padding: 1.25rem 1.25rem;
+        // height: 240px;
+    }
+    .card-title{
+        margin-bottom: 0.5rem;
+        font-size: 19px;
+        color: #1E2022;
+    }
+    .card-text {
+        color: #677788;
+        margin-top: 0;
+        margin-bottom: 1rem;
+    }
+    .list-pointer-item:not(:last-child) {
+        margin-bottom: 0.5rem;
+    }
+    .list-pointer-item {
+        position: relative;
+        color: #677788;
+        // padding-left: 1.75rem;
+    }
+    .card-footer{
+        padding: 1.25rem 1.25rem;
+        background-color: white;
+    }
+    .card-link {
+        font-weight: 600;
+        white-space: nowrap;
+        text-decoration: none;
+        color: #677788;
+        font-size: 17px;
+        cursor: pointer;
+    }
+    .card-footer:hover{
+        color: #3778FF;
+    }
+}
