--- a/src/app/components/single-patient-details/single-patient-details.component.html
+++ b/src/app/components/single-patient-details/single-patient-details.component.html
@@ -2,8 +2,22 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 
-<div class="container-bx">
-  <div class="patient-data-section" style="background-color: white; width: 100%;border-radius: 24px; margin-right: 20px;">
+<div class="bg-cont" style="background-image: url('../assets/bg1.png');">
+  <div class="inside-cont">
+      <div class="row align-items-center">
+          <div class="col">
+              <span class="h2" style="color: white;">Patient</span>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div class="container-bx" style="display: flex; justify-content: center;">
+  <div class="patient-data-section" style="background-color: white;
+  width: 85%;
+  margin-top: -6rem!important;
+  border-radius: 24px;
+  margin-right: 20px;">
       <div class="mt-2">
         <div class="d-flex flex-column align-items-center">
           <div class="d-flex justify-content-center">
@@ -87,9 +101,9 @@
               </div>
             </div>
           </div>
-          <div style="width:50%; display: grid; align-content: center;">
+          <div style="width:50%; display: grid; align-content: flex-start;">
             <div #gaugeChart
-              style="border-radius: 24px; width:100% ; height:200%; background-color: white; ">
+              style="border-radius: 24px; width:85% ; height:200%; background-color: white; ">
             </div>
           </div>
         </div>
