--- a/src/app/components/single-patient-details/single-patient-details.component.scss
+++ b/src/app/components/single-patient-details/single-patient-details.component.scss
@@ -8,4 +8,27 @@
     height: 100vh;
     left: 22%;
 }
+
+.bg-cont{
+    height: 230px;
+    z-index: 200;
+    .inside-cont{
+        height: 100%;
+        margin: 0px 61px;
+        padding: 48px 12px;
+    }
+    .col{
+        display: flex;
+        justify-content: space-between;
+    }
+    .btn{
+        color: #f7faff;
+        background-color: rgba(247,250,255,.1);
+        height: 41px;
+    }
+    .btn:hover{
+        background-color: white;
+        color:black;
+    }
+}
   
