--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- <div style="display: flex;"> -->
 <!-- <app-sidenav></app-sidenav> -->
 <div class="main">
-  <div style="display: flex; flex-direction: column; gap: 10px; width: 40%">
+  <div style="display: flex; flex-direction: column; gap: 10px; width: 40%;">
     <div
       #myPieChart
       style="width: 100%; height: 320px; background: white; border-radius: 24px"
@@ -19,7 +19,7 @@
       <canvas id="MyChart">{{ chart }}</canvas>
     </div> -->
 
-    <div class="chart-container">
+    <div class="chart-container" style="width: 100%; height: 320px; background: white; border-radius: 24px;">
       <canvas id="MyBarChart">{{ chart }}</canvas>
     </div>
     <!-- <div style="background: white; margin-bottom: 20px; border-radius: 24px ; margin-left: 20px; width: 30%; height: 322px;">
@@ -37,9 +37,9 @@
       >
         <ng-template pTemplate="header">
           <div class="card-head">
-            <p class="card-header-title" style="font-weight: 500">
+            <!-- <p class="card-header-title" style="font-weight: 500">
               They Need Diagnosis
-            </p>
+            </p> -->
           </div>
           <tr
             style="
