--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -128,3 +128,38 @@ th{
     transform: scale(1);
      }
     }
+.box {
+    animation: fadeIn 1s ease-in-out forwards;
+    opacity: 0;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        }
+    to {
+        opacity: 1;
+        }
+}
+
+.bg-cont{
+    height: 230px;
+    z-index: 200;
+    .inside-cont{
+        height: 100%;
+        margin: 0px 61px;
+        padding: 48px 12px;
+    }
+    .col{
+        display: flex;
+        justify-content: space-between;
+    }
+    .btn{
+        color: #f7faff;
+        background-color: rgba(247,250,255,.1);
+        height: 41px;
+    }
+    .btn:hover{
+        background-color: white;
+        color:black;
+    }
+}
