--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     </div>
     <div>
         <router-outlet></router-outlet>
+        <!-- <app-login-page></app-login-page> -->
     </div>
 </div>
 
