--- a/src/app/components/patient/patient.component.html
+++ b/src/app/components/patient/patient.component.html
@@ -53,9 +53,9 @@
                         <path
                             d="M10.464 3.314a.5.5 0 0 0-.945.049L7.921 8.956 6.464 5.314a.5.5 0 0 0-.88-.091L3.732 8H.5a.5.5 0 0 0 0 1H4a.5.5 0 0 0 .416-.223l1.473-2.209 1.647 4.118a.5.5 0 0 0 .945-.049l1.598-5.593 1.457 3.642A.5.5 0 0 0 12 9h3.5a.5.5 0 0 0 0-1h-3.162l-1.874-4.686Z" />
                     </svg>
-                    <mat-card-header class="urgent">
+                    <mat-card-header >
 
-                        <mat-card-title style="color:yellow"class="count">{{currentCountUrgent}}</mat-card-title>
+                        <mat-card-title class="count">{{currentCountUrgent}}</mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
                         <p>
@@ -81,9 +81,10 @@
     
             <div style="padding: 10px ;">
             </div>
-            <mat-form-field>
+            <mat-form-field appearance="outline">
                 <mat-label>Search</mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+                <input  matInput (keyup)="applyFilter($event)"  placeholder="Search" #input>
+                <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
             <div class="sroll-bar mat-elevation-z8">
                 <table mat-table [dataSource]="dataSource" matSort>
@@ -138,15 +139,15 @@
                     <!-- Actions Column -->
                     <ng-container matColumnDef="actions">
                         <th mat-header-cell *matHeaderCellDef></th>
-                        <td mat-cell *matCellDef="let element">
-                            <button mat-button [routerLink]="['/patient',element.HADM_ID]">View Details</button>
+                        <td mat-cell width="18%" *matCellDef="let element">
+                            <button color="primary" mat-raised-button [routerLink]="['/patient',element.HADM_ID]">View Details</button>
                         </td>
                     </ng-container>
     
                     <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    <tr mat-row class="a" *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
-                <mat-paginator [pageSizeOptions]="[25,50,75,100]" showFirstLastButtons>
+                <mat-paginator [pageSizeOptions]="[10,50,75,100]" showFirstLastButtons>
     
                 </mat-paginator>
             </div>
