--- a/src/app/components/patient/patient.component.scss
+++ b/src/app/components/patient/patient.component.scss
@@ -5,6 +5,19 @@ mat-toolbar {
 .mat-elevation-z8
 {
         box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+        transition: box-shadow 0.1s ease-in-out;
+}
+.mat-elevation-z8:hover {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+}
+.urgent:hover{
+    box-shadow: 0 3px 6px rgba(235, 210, 21, 0.16);
+}
+.emergency:hover {
+    box-shadow: 0 3px 6px rgba(244, 11, 11, 0.16);
+}
+.elective:hover {
+    box-shadow: 0 3px 6px rgba(9, 177, 39, 0.16);
 }
 .content {
     padding: 16px;
@@ -15,7 +28,6 @@ mat-toolbar {
         display: flex;
         align-items: center;
         padding: 3%;
-
 
       
 
@@ -50,6 +62,7 @@ mat-toolbar {
 
         &.urgent {
             color: gold;
+            
         }
 
         p {
@@ -73,10 +86,10 @@ mat-form-field {
     /* change this value to adjust the width */
 }
 
-.sroll-bar {
-    height: 500px;
-    overflow-y: auto;
-}
+// .sroll-bar {
+//     height: 500px;
+//     overflow-y: auto;
+// }
 
 .mat-mdc-header-row{
     background: #F8FAFD;
@@ -162,4 +175,10 @@ th{
         background-color: white;
         color:black;
     }
+}
+.a:hover {
+        transform: scale(1.03);
+            transition: 0.3s ease-in;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+            background-color: black;
 }
